made additional changes

--- a/src/styles/_booking-reserve.scss
+++ b/src/styles/_booking-reserve.scss
@@ -79,3 +79,13 @@
     margin: 0;
   }
 }
+
+.daterangepicker td.in-range {
+  background-color: $main-app-color !important;
+  opacity: 0.5;
+}
+
+.daterangepicker td.active {
+  background-color: $main-app-color !important;
+  opacity: 1;
+}
