made additional changes

--- a/src/styles/_editable.scss
+++ b/src/styles/_editable.scss
@@ -1,6 +1,10 @@
 .editable-component {
   display: flex;
 
+  .editable-item {
+    margin-bottom: 0 !important;
+  }
+
   .button-container {
     align-self: center;
   }
