made additional changes

--- a/src/styles/_rental-detail.scss
+++ b/src/styles/_rental-detail.scss
@@ -69,6 +69,7 @@
       &-description {
         font-weight: 300;
         margin-bottom: 30px;
+        resize: none;
       }
 
       &-assets {
