--- a/src/components/file-upload/FileLoader.scss
+++ b/src/components/file-upload/FileLoader.scss
@@ -10,4 +10,17 @@
   .upload-text {
     font-size: 17px;
   }
+
+  .img-preview-container {
+    background: #f7f7f7;
+    padding: 10px;
+  }
+
+  .img-preview {
+    height: 116px;
+
+    img {
+      height: 100%;
+    }
+  }
 }
